test/TestPhases/importchecking/valid/importboxapi.blc

import api "box:testlib/api"

@[EntryPoint]
activity Main()
    run api.A()
end