test/TestPhases/importchecking/invalid/importNoFile.blc
import I "nofile"

@[EntryPoint]
activity Main () ()
    await true
end